--- a/preload.html
+++ b/preload.html
@@ -157,7 +157,7 @@ h1 {
 
 .runner {
   position: absolute;
-  bottom: 20px; /* هذه تجعله دائماً فوق الحافة السفلية بـ 20 بكسل مهما طالت الشاشة */
+  bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
   font-size: 35px;
@@ -375,11 +375,6 @@ h1 {
 const filesToLoad = [
   'image/wood.webp',
   'image/Upper_wood.webp',
-  'image/logo-A.webp',
-  'image/logo-B.webp',
-  'image/logo-C.webp',
-  'image/logo-D.webp',
-  'image/0.png',
   'style.css',
   'script.js',
   'tracker.js'
@@ -398,19 +393,18 @@ function updateProgress() {
   progressBar.textContent = percentage + '%';
 }
 
-async function loadFile(url, index) {
+async function loadFile(url) {
   return new Promise(async (resolve) => {
     try {
       const cache = await caches.open('semester-3-cache-v1');
       let cachedResponse = await cache.match(url);
 
       if (cachedResponse) {
-        console.log(`✅ من الكاش: ${url}`);
+        console.log(`✅ كاش: ${url}`);
         loadedFiles++;
         updateProgress();
-        fileStatus.textContent = `✔ محفوظ: ${url.split('/').pop()}`;
-
-        setTimeout(resolve, 50);
+        fileStatus.textContent = `✔ ${url.split('/').pop()}`;
+        resolve();
         return;
       }
 
@@ -424,9 +418,8 @@ async function loadFile(url, index) {
 
       loadedFiles++;
       updateProgress();
-      fileStatus.textContent = `✔ تم: ${url.split('/').pop()}`;
-
-      setTimeout(resolve, 100);
+      fileStatus.textContent = `✔ ${url.split('/').pop()}`;
+      resolve();
 
     } catch (error) {
       console.error('❌ خطأ:', url, error);
@@ -438,11 +431,9 @@ async function loadFile(url, index) {
 }
 
 async function startLoading() {
-  const loadPromises = filesToLoad.map((file, index) => 
-    loadFile(file, index)
-  );
-
-  await Promise.all(loadPromises);
+  for (const file of filesToLoad) {
+    await loadFile(file);
+  }
 
   fileStatus.textContent = '🎉 اكتمل التحميل!';
   continueBtn.style.display = 'block';
@@ -563,11 +554,8 @@ function updateGame() {
     itemData.y += fallSpeed;
     itemData.element.style.top = itemData.y + 'px';
 
-    // الحصول على الارتفاع الحالي للحاوية (Game Container)
     const containerHeight = gameContainer.offsetHeight;
 
-    // 1. منطق التصادم: يتم عندما يصل الإيموجي لمستوى اللاعب (تقريباً عند 80% من طول الشاشة)
-    // طرحنا 60px لضمان حدوث التصادم عند ملامسة جسم اللاعب
     if (itemData.y > containerHeight - 100 && itemData.y < containerHeight - 40) {
       const playerLane = runnerPosition + 1;
 
@@ -590,7 +578,6 @@ function updateGame() {
       }
     }
 
-    // 2. منطق حساب النقاط والاختفاء: يتم عندما يتجاوز الإيموجي أسفل الشاشة تماماً
     if (itemData.y > containerHeight) {
       score++;
       scoreDisplay.textContent = score;
@@ -614,7 +601,6 @@ function saveLocalLeaderboard(leaderboard) {
 }
 
 async function updateLeaderboard(playerName, playerScore) {
-  // إرسال للسيرفر
   if (typeof trackGameScore === 'function') {
     trackGameScore(playerScore);
   }
@@ -667,7 +653,6 @@ function endGame() {
   finalScore.textContent = `النقاط النهائية: ${score}`;
   gameOverlay.style.display = 'flex';
 
-  // الحصول على اسم اللاعب من UserTracker
   let playerName = 'زائر';
   if (typeof UserTracker !== 'undefined' && typeof UserTracker.getDisplayName === 'function') {
     playerName = UserTracker.getDisplayName();
