--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
-<meta name="version" content="2025.01.22.001">
+<meta name="version" content="2025.01.23.001">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>semester-3 / خريطة الكلية التفاعلية</title>
@@ -23,21 +23,66 @@
   <link rel="icon" type="image/png" href="image/0.png">
   <link rel="apple-touch-icon" href="image/0.png">
   <link rel="stylesheet" href="style.css">
-
-<script>
-// التحقق من الزيارة الأولى فقط
-const preloadDone = localStorage.getItem("preload_done");
-
-if (!preloadDone) {
-    console.log('🔄 أول زيارة - التحويل لشاشة التحميل المسبق');
-    location.replace("preload.html");
-} else {
-    console.log('✅ الملفات الأساسية محفوظة - تحميل مباشر');
-    localStorage.setItem("last_visit_timestamp", Date.now());
-}
-</script>
 </head>
 <body>
+
+<!-- ========================================
+     شاشة Preload - تظهر عند أول زيارة فقط
+     ======================================== -->
+<div id="preload-screen" class="hidden">
+  <div class="preload-container">
+    <div class="notice">
+      💡 هذه الصفحة تظهر في أول زيارة فقط — الملفات ستُخزن في الكاش للتحميل السريع لاحقاً
+    </div>
+
+    <div class="logo">🏥</div>
+    <h1>جاري التحميل</h1>
+    <div class="subtitle">تجنب العدوى 🦠 واجمع العلاج 💊</div>
+
+    <div class="progress-container">
+      <div class="progress-bar" id="progressBar">0%</div>
+    </div>
+
+    <div class="file-status" id="fileStatus">جاري البدء...</div>
+
+    <button class="continue-btn" id="continueBtn">متابعة إلى الموقع ➡️</button>
+
+    <div class="game-container" id="gameContainer">
+      <div class="game-stats">
+        <div class="game-stat">❤️ <span id="heartsDisplay">0</span></div>
+        <div class="game-stat">⭐ <span id="scoreDisplay">0</span></div>
+      </div>
+
+      <div class="runner" id="runner">👨‍⚕️</div>
+
+      <div class="game-overlay" id="gameOverlay">
+        <h2>انتهت اللعبة!</h2>
+        <div class="final-score" id="finalScore">النقاط: 0</div>
+        <button class="restart-btn" id="restartBtn">🔄</button>
+      </div>
+    </div>
+
+    <div class="controls">
+      <button class="control-btn" id="leftBtn">➡️</button>
+      <button class="control-btn" id="rightBtn">⬅️</button>
+    </div>
+
+    <div class="leaderboard">
+      <h3>🏆 أفضل 5 لاعبين عالمياً</h3>
+      <ul class="leaderboard-list" id="leaderboardList">
+        <li class="leaderboard-item">
+          <span class="leaderboard-rank">-</span>
+          <span class="leaderboard-name">جاري التحميل...</span>
+          <span class="leaderboard-score">-</span>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<!-- ========================================
+     المحتوى الرئيسي للموقع
+     ======================================== -->
 
 <div id="group-selection-screen">
   <div id="group-selection-content">
@@ -105,7 +150,6 @@ if (!preloadDone) {
   </div>
 </div>
 
-<!-- زر العين المستقل -->
 <div id="eye-toggle-standalone" class="top" role="button" aria-label="إظهار شريط البحث" tabindex="0">
   👁️
 </div>
@@ -162,7 +206,6 @@ if (!preloadDone) {
   >
     <defs></defs>
 
-    <!-- الطبقة الأولى: wood.webp في الخلفية -->
     <g transform="translate(0,0)" id="files-list-container" style="isolation: isolate;">
       <image 
         data-src="image/wood.webp" 
@@ -175,13 +218,9 @@ if (!preloadDone) {
       />
     </g>
 
-    <!-- الطبقة الثانية: المحتوى الديناميكي -->
     <g id="dynamic-links-group" style="isolation: isolate;"></g>
-
-    <!-- الطبقة الثالثة: محتوى المجموعة -->
     <g id="group-specific-content" style="isolation: isolate;"></g>
 
-    <!-- الطبقة الرابعة: Upper_wood -->
     <g id="upper-wood-layer" style="isolation: isolate; pointer-events: none; z-index: 99999;">
       <image 
         data-src="image/Upper_wood.webp" 
@@ -194,9 +233,7 @@ if (!preloadDone) {
       />
     </g>
 
-    <!-- الطبقة الخامسة والأخيرة: الأزرار فوق كل شيء -->
     <g id="fixed-controls-layer" style="isolation: isolate;">
-      <!-- الصف الأول: 3 أزرار -->
       <g id="change-group-btn" style="cursor: pointer;" role="button" tabindex="0">
         <rect x="120" y="100" width="250" height="50" rx="10"/>
         <text 
@@ -229,7 +266,6 @@ if (!preloadDone) {
         >🔄 Reset</text>
       </g>
 
-      <!-- الصف الثاني: زر الرجوع الكبير -->
       <g id="back-button-group" style="cursor: pointer;" role="button" tabindex="0">
         <rect 
           id="back-btn" 
@@ -254,7 +290,6 @@ if (!preloadDone) {
 <script defer src="script.js"></script>
 <script defer src="tracker.js"></script>
 
-<!-- Service Worker Registration -->
 <script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
