--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
 <script src="tracker.js"></script>
 <script src="zoom-reset-fix.js"></script>
 <script src="script-complete.js"></script>
+<script defer src="script-fixes.js"></script>
 
 <!-- Service Worker -->
 <script>
