--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
 <meta name="version" content="2025.02.04.FINAL.v2">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>semester-3 / خريطة الكلية التفاعلية</title>
+  <title><meta property="og:type" content="website">
+<meta property="og:url" content="https://mue24med.github.io/semester-3/">
+<meta property="og:title" content="semester-3 | خريطة الكلية التفاعلية">
+<meta property="og:description" content="خريطة تفاعلية لعرض محاضرات وسكاشن الفرقة الثانية - الفصل الدراسي الثالث">
+<meta property="og:image" content="https://mue24med.github.io/semester-3/image/0.webp">
+
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://mue24med.github.io/semester-3/">
+<meta property="twitter:title" content="semester-3 | خريطة الكلية التفاعلية">
+<meta property="twitter:description" content="خريطة تفاعلية لعرض محاضرات وسكاشن الفرقة الثانية - الفصل الدراسي الثالث">
+<meta property="twitter:image" content="https://mue24med.github.io/semester-3/image/0.webp">
+</title>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
