--- a/index.html
+++ b/index.html
@@ -1,35 +1,52 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-<meta http-equiv="Pragma" content="no-cache">
-<meta http-equiv="Expires" content="0">
-<meta name="version" content="2025.02.04.FINAL.v2">
+  <!-- أساسيات -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><meta property="og:type" content="website">
-<meta property="og:url" content="https://mue24med.github.io/semester-3/">
-<meta property="og:title" content="semester-3 | خريطة الكلية التفاعلية">
-<meta property="og:description" content="خريطة تفاعلية لعرض محاضرات وسكاشن الفرقة الثانية - الفصل الدراسي الثالث">
-<meta property="og:image" content="https://mue24med.github.io/semester-3/image/0.webp">
 
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://mue24med.github.io/semester-3/">
-<meta property="twitter:title" content="semester-3 | خريطة الكلية التفاعلية">
-<meta property="twitter:description" content="خريطة تفاعلية لعرض محاضرات وسكاشن الفرقة الثانية - الفصل الدراسي الثالث">
-<meta property="twitter:image" content="https://mue24med.github.io/semester-3/image/0.webp">
-</title>
+  <title>semester-3 | خريطة الكلية التفاعلية</title>
+
+  <!-- Open Graph (WhatsApp / Facebook / Telegram) -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mue24med.github.io/semester-3/">
+  <meta property="og:title" content="semester-3 | خريطة الكلية التفاعلية">
+  <meta property="og:description" content="خريطة تفاعلية لعرض محاضرات وسكاشن الفرقة الثانية - الفصل الدراسي الثالث">
+  <meta property="og:image" content="https://mue24med.github.io/semester-3/image/0.webp">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:locale" content="ar_AR">
+
+  <!-- Twitter (اختياري لكن مفيد) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="semester-3 | خريطة الكلية التفاعلية">
+  <meta name="twitter:description" content="خريطة تفاعلية لعرض محاضرات وسكاشن الفرقة الثانية - الفصل الدراسي الثالث">
+  <meta name="twitter:image" content="https://mue24med.github.io/semester-3/image/0.webp">
+
+  <!-- PWA / Mobile -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="theme-color" content="#000000">
   <meta name="color-scheme" content="only light">
   <meta name="supported-color-schemes" content="light">
-  <meta name="theme-color" content="#000000">
+
+  <!-- Cache Control -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+  <meta name="version" content="2025.02.04.FINAL.v2">
+
+  <!-- Performance -->
   <link rel="preconnect" href="https://raw.githubusercontent.com" crossorigin>
   <link rel="preconnect" href="https://api.github.com" crossorigin>
   <link rel="dns-prefetch" href="https://mozilla.github.io">
+
+  <!-- Icons -->
   <link rel="icon" type="image/png" href="image/0.png">
   <link rel="apple-touch-icon" href="image/0.png">
+
+  <!-- Styles -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
