--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:image:height" content="630">
   <meta property="og:locale" content="ar_AR">
 
-  <!-- Twitter -->
+  <!-- Twitter (اختياري لكن مفيد) -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="semester-3 | خريطة الكلية التفاعلية">
   <meta name="twitter:description" content="خريطة تفاعلية لعرض محاضرات وسكاشن الفرقة الثانية - الفصل الدراسي الثالث">
@@ -35,7 +35,7 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
-  <meta name="version" content="2025.02.11.FINAL.v3">
+  <meta name="version" content="2025.02.04.FINAL.v2">
 
   <!-- Performance -->
   <link rel="preconnect" href="https://raw.githubusercontent.com" crossorigin>
@@ -272,7 +272,7 @@
 
       <g id="reset-btn" style="cursor: pointer;">
         <rect x="654" y="100" width="250" height="50" rx="10"/>
-        <text id="reset-btn-text" x="779" y="130" text-anchor="middle" dominant-baseline="middle">🔄 تحديث</text>
+        <text id="reset-btn-text" x="779" y="130" text-anchor="middle" dominant-baseline="middle">🔄 Reset</text>
       </g>
 
       <g id="back-button-group" style="cursor: pointer;">
