--- a/index.html
+++ b/index.html
@@ -282,17 +282,27 @@
     </g>
   </svg>
 </div>
-
-<!-- المكتبات -->
+<!-- المكتبات الخارجية -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
 <script>
   if (typeof pdfjsLib !== 'undefined') {
-    pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+    pdfjsLib.GlobalWorkerOptions.workerSrc = 
+      'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
   }
 </script>
 
-<!-- السكريبتات الرئيسية -->
-<script src="script.js"></script>
+<!-- السكريبتات المقسمة من مجلد javascript -->
+<script type="module" src="javascript/core/config.js"></script>
+<script type="module" src="javascript/core/utils.js"></script>
+<script type="module" src="javascript/core/navigation.js"></script>
+<script type="module" src="javascript/core/group-loader.js"></script>
+<script type="module" src="javascript/ui/pdf-viewer.js"></script>
+<script type="module" src="javascript/ui/wood-interface.js"></script>
+<script type="module" src="javascript/features/preload-game.js"></script>
+<script type="module" src="javascript/features/svg-processor.js"></script>
+<script type="module" src="javascript/script.js"></script>
+
+<!-- Tracker منفصل (خارج مجلد javascript) -->
 <script src="tracker.js"></script>
 
 <!-- Service Worker -->
@@ -300,28 +310,8 @@
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
     navigator.serviceWorker.register('./sw.js')
-      .then(registration => {
-        console.log('✅ Service Worker مسجل');
-        registration.addEventListener('updatefound', () => {
-          const newWorker = registration.installing;
-          newWorker.addEventListener('statechange', () => {
-            if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
-              if (confirm('🔄 يوجد تحديث جديد. هل تريد إعادة التحميل؟')) {
-                newWorker.postMessage({ action: 'skipWaiting' });
-                window.location.reload();
-              }
-            }
-          });
-        });
-      });
-  });
-
-  let refreshing = false;
-  navigator.serviceWorker.addEventListener('controllerchange', () => {
-    if (!refreshing) {
-      refreshing = true;
-      window.location.reload();
-    }
+      .then(registration => console.log('✅ Service Worker مسجل'))
+      .catch(err => console.error('❌ فشل تسجيل SW:', err));
   });
 }
 </script>
@@ -332,11 +322,10 @@ async function checkForUpdates() {
   try {
     const lastCheck = localStorage.getItem('last_update_check');
     const now = Date.now();
-
     if (lastCheck && (now - parseInt(lastCheck)) < 300000) return;
 
     const response = await fetch(
-      'https://api.github.com/repos/MUE24Med/semester-3/commits/main',
+      'https://api.github.com/repos/MUE24Med/s3/commits/main',
       { cache: 'no-store', headers: { 'Accept': 'application/vnd.github.v3+json' } }
     );
 
