--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 <script type="module" src="javascript/ui/wood-interface.js"></script>
 <script type="module" src="javascript/features/svg-processor.js"></script>
 <script type="module" src="javascript/features/preload-game.js"></script>
-<script type="module" src="javascript/script.js"></script>
+<script type="module" src="script.js"></script>
 
 <!-- ✅ Tracker منفصل (بدون تحذيرات) -->
 <script src="tracker.js"></script>
