--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@
     <button class="continue-btn" id="continueBtn">متابعة إلى الموقع ➡️</button>
     <div class="game-container" id="gameContainer">
       <div class="game-stats">
-        <div class="game-stat">❤️ <span id="heartsDisplay">0</span></div>
-        <div class="game-stat">⭐ <span id="scoreDisplay">0</span></div>
-      </div>
+<div class="game-stats">
+  <div class="game-stat">❤️ <span id="heartsDisplay">0</span></div>
+  <div class="game-stat" style="color: #f1c40f;">🏆 <span id="highScoreDisplay">0</span></div> 
+  <div class="game-stat">⭐ <span id="scoreDisplay">0</span></div>
+</div>
       <div class="runner" id="runner">👨‍⚕️</div>
       <div class="game-overlay" id="gameOverlay">
         <h2>انتهت اللعبة!</h2>
