--- a/index.html
+++ b/index.html
@@ -293,66 +293,41 @@
     <image data-src="image/B/20.webp" width="1024" height="2454" />
 </g>
 
-<!-- الاسبوع الواحد و العشرين - محدث حسب الاحداثي الجديد -->
+<!-- الاسبوع الواحد و العشرين -->
 <g transform="translate(21504,0)">
     <image data-src="image/B/21.webp" width="1024" height="2454" />
 
     <!-- Saturday 21 -->
     <g transform="translate(139,0)">
-        <rect x="0" y="150.8" height="378" class="m w l" data-href="HEM/Lecture/pharma-01.pdf"/>
-        <rect x="0" y="528.8" height="379.3" class="m w s" data-href="HEM/Section/micro-02.pdf"/>
-        <rect x="0" y="908.1" height="377.5" class="m w q" data-href="HEM/Question/pharma-01.pdf"/>
-        <rect x="57.5" y="908.1" height="377.5" class="m w a" data-href="HEM/Answer/pharma-01.pdf"/>
-        <rect x="0" y="1285.6" height="375.8" class="m w l" data-href="HEM/Lecture/patho-02.pdf"/>
-        <rect x="0" y="1661.4" height="593" class="m w i" data-href="IPC/Lecture/Blood Pressure Measurement.pdf" data-full-text="Blood Pressure Measurement .pdf"/>
+        <rect x="0" y="1128.5" height="376.5" class="m w" data-href="#" />
+        <rect x="0" y="150.8" height="378" class="m w" data-href="#"/>
+        <rect x="0" y="1886.2" height="287" class="m w" data-href="#"/>
     </g>
 
     <!-- Sunday 21 -->
     <g transform="translate(254,0)">
-        <rect x="0" y="150.5" height="377.8" class="m w l" data-href="HEM/Lecture/physio-03.pdf"/>
-        <rect x="0" y="528.3" height="380.1" class="m w s" data-href="HEM/Section/para-02.pdf"/>
-        <rect x="0" y="908.4" height="376.5" class="m w l" data-href="HEM/Lecture/anatomy-03.pdf"/>
-        <rect x="0" y="1284.9" height="377.2" class="m w q" data-href="HEM/Question/physio-02.pdf"/>
-        <rect x="57.5" y="1284.9" height="377.2" class="m w a" data-href="HEM/Answer/physio-02.pdf"/>
-        <rect x="0" y="1662.1" height="592.4" class="m w i" data-href="IPC/Lecture/Heart Sounds and Murmurs.pdf" data-full-text="Heart Sounds and Murmurs .pdf"/>
+        <rect x="0" y="1128.3" height="376.71" class="m w l" data-href="HEM/Lecture/para-01.pdf" />
+        <rect x="0" y="1505.7" height="378.8" class="m w s" data-href="#" />
+        <rect x="0" y="1885.5" height="289.5" class="m w l" data-href="HEM/Lecture/physio-02.pdf" />
     </g>
 
     <!-- Monday 21 -->
     <g transform="translate(368.5,0)">
-        <rect x="0" y="150.3" height="378.5" class="m w l" data-href="HEM/Lecture/micro-02.pdf"/>
-        <rect x="0" y="528.8" height="379.7" class="m w l" data-href="HEM/Lecture/para-02.pdf"/>
-        <rect x="0" y="908.5" height="376.5" class="m w s" data-href="HEM/Section/patho-01.pdf"/>
-        <rect x="0" y="1285" height="377.3" class="m w l" data-href="HEM/Lecture/pharma-02.pdf"/>
-        <rect x="0" y="1662.3" height="592.2" class="m w l" data-href="HEM/Lecture/physio-04.pdf"/>
-    </g>
-
-    <!-- Tuesday 21 -->
-    <g transform="translate(483,0)">
-        <rect x="0" y="150.6" height="378.2" class="m w l" data-href="HEM/Lecture/histo-02.pdf"/>
-        <rect x="0" y="528.8" height="379.4" class="m w l" data-href="HEM/Lecture/biochem-01.pdf"/>
-        <rect x="0" y="908.2" height="376.8" class="m w s" data-href="HEM/Section/physio-02.pdf"/>
-        <rect x="0" y="1285" height="377.5" class="m w q" data-href="HEM/Question/patho-01.pdf"/>
-        <rect x="57.5" y="1285" height="377.5" class="m w a" data-href="HEM/Answer/patho-01.pdf"/>
-        <rect x="0" y="1662.5" height="592" class="m w l" data-href="HEM/Lecture/immuno-01.pdf"/>
+        <rect x="0" y="289.3" height="448.1" class="m w" data-href="#" />
+        <rect x="0" y="853.5" height="547.6" class="m w" data-href="#" />
+        <rect x="0" y="1886.3" height="384.2" class="m w" data-href="#" />
     </g>
 
     <!-- Wednesday 21 -->
-    <g transform="translate(598,0)">
-        <rect x="0" y="150.7" height="377.9" class="m w l" data-href="HEM/Lecture/patho-03.pdf"/>
-        <rect x="0" y="528.6" height="379.6" class="m w s" data-href="HEM/Section/histo-01.pdf"/>
-        <rect x="0" y="908.2" height="376.4" class="m w l" data-href="HEM/Lecture/pharma-03.pdf"/>
-        <rect x="0" y="1284.6" height="377.8" class="m w i" data-href="IPC/Lecture/Anemia Classification.pdf" data-full-text="Anemia Classification .pdf"/>
-        <rect x="0" y="1662.4" height="592.1" class="m w l" data-href="HEM/Lecture/physio-05.pdf"/>
+    <g transform="translate(597.758,0)">
+        <rect x="0" y="1403" height="481" class="m w" data-href="#" />
     </g>
 
     <!-- Thursday 21 -->
     <g transform="translate(713,0)">
-        <rect x="0" y="150.4" height="378.3" class="m w l" data-href="HEM/Lecture/oncology-01.pdf"/>
-        <rect x="0" y="528.7" height="379.5" class="m w s" data-href="HEM/Section/biochem-01.pdf"/>
-        <rect x="0" y="908.2" height="376.6" class="m w q" data-href="HEM/Question/pharma-02.pdf"/>
-        <rect x="57.5" y="908.2" height="376.6" class="m w a" data-href="HEM/Answer/pharma-02.pdf"/>
-        <rect x="0" y="1284.8" height="377.4" class="m w l" data-href="HEM/Lecture/coagulation-01.pdf"/>
-        <rect x="0" y="1662.2" height="592.3" class="m w i" data-href="IPC/Lecture/Complete Blood Count Interpretation.pdf" data-full-text="Complete Blood Count Interpretation .pdf"/>
+        <rect x="0" y="391.2" height="461" class="m w" data-href="#" />
+        <rect x="0" y="854" height="547" class="m w" data-href="#" />
+        <rect x="0" y="1403.1" height="482.6" class="m w" data-href="#" />
     </g>
 </g>
 
