--- a/index.html
+++ b/index.html
@@ -138,6 +138,21 @@
   </div>
 </div>
 
+<!-- 📊 ملخص الجلسة (يظهر في أسفل اليسار) -->
+<div id="sessionSummary">
+  <h4>📊 ملخص الجلسة</h4>
+  <div class="stat">
+    <span class="stat-label">عدد الألعاب:</span>
+    <span class="stat-value" id="sessionGamesCount">0</span>
+  </div>
+  <div class="stat">
+    <span class="stat-label">إجمالي النقاط:</span>
+    <span class="stat-value" id="sessionTotalScore">0</span>
+  </div>
+  <div class="stat">
+    <span class="stat-label">أعلى نقاط:</span>
+    <span class="stat-value" id="sessionHighScore">0</span>
+  </div>
   <div class="stat">
     <span class="stat-label">المتوسط:</span>
     <span class="stat-value" id="sessionAvgScore">0</span>
